# parallel_download

./: README.md  TESTING.md  pyproject.toml  pytest.ini
examples/: __init__.py  download_dry_preview.py
src/parallel_download/: __init__.py  config.py  download_request.py  download_result.py  downloader.py  errors.py  utils.py
tests/: __init__.py  conftest.py  test_download_request.py  test_downloader.py  test_utils.py
