[project]
name = "parallel-download"
version = "1.0.0"
description = "Parallel file downloader using asyncio and aiohttp"
authors = [
    { name = "devcomfort", email = "im@devcomfort.me" }
]
dependencies = [
    "loguru>=0.7.3",
    "rich>=14.2.0",
    "pydantic>=2.12.5",
    "asyncio>=4.0.0",
    "aiohttp>=3.13.2",
    "aiofiles>=25.1.0",
]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "black>=25.12.0",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "isort>=7.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/parallel_download"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

